Ensure harvester rests the configured amount of time between the finish moment of its last previous run and the start moment of its new run. Refs #20077.